catkin_ws/logs/iq_gnc/build.make.519.log.stderr
In file included from /home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:3:
/home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:533:53: error: ‘ros::time’ has not been declared
  533 | void go_to_goalPos(float x, float y, float z , ros::time leader_time) {  //global
      |                                                     ^~~~
/home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp: In function ‘void go_to_goalPos(float, float, float, int)’:
/home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:548:40: error: no match for ‘operator=’ (operand types are ‘std_msgs::Header_<std::allocator<void> >::_stamp_type’ {aka ‘ros::Time’} and ‘int’)
  548 |  target_global_position.header.stamp = leader_time;
      |                                        ^~~~~~~~~~~
In file included from /opt/ros/noetic/include/ros/serialization.h:34,
                 from /home/mario/catkin_ws/devel/include/mavros_msgs/CommandTOLRequest.h:14,
                 from /home/mario/catkin_ws/devel/include/mavros_msgs/CommandTOL.h:11,
                 from /home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:1,
                 from /home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:3:
/opt/ros/noetic/include/ros/time.h:170:22: note: candidate: ‘constexpr ros::Time& ros::Time::operator=(const ros::Time&)’
  170 |   class ROSTIME_DECL Time : public TimeBase<Time, Duration>
      |                      ^~~~
/opt/ros/noetic/include/ros/time.h:170:22: note:   no known conversion for argument 1 from ‘int’ to ‘const ros::Time&’
/opt/ros/noetic/include/ros/time.h:170:22: note: candidate: ‘constexpr ros::Time& ros::Time::operator=(ros::Time&&)’
/opt/ros/noetic/include/ros/time.h:170:22: note:   no known conversion for argument 1 from ‘int’ to ‘ros::Time&&’
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp: In function ‘void drone1_gpsSub_cb(const ConstPtr&)’:
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:223:61: error: cannot convert ‘std_msgs::Header_<std::allocator<void> >::_stamp_type’ {aka ‘ros::Time’} to ‘int’
  223 |     go_to_goalPos(-2,-2,3, current_global_position_2.header.stamp);
      |                            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~
      |                                                             |
      |                                                             std_msgs::Header_<std::allocator<void> >::_stamp_type {aka ros::Time}
In file included from /home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:3:
/home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:533:58: note:   initializing argument 4 of ‘void go_to_goalPos(float, float, float, int)’
  533 | void go_to_goalPos(float x, float y, float z , ros::time leader_time) {  //global
      |                                                ~~~~~~~~~~^~~~~~~~~~~
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:228:60: error: cannot convert ‘std_msgs::Header_<std::allocator<void> >::_stamp_type’ {aka ‘ros::Time’} to ‘int’
  228 |     go_to_goalPos(-2,2,3, current_global_position_2.header.stamp);
      |                           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~
      |                                                            |
      |                                                            std_msgs::Header_<std::allocator<void> >::_stamp_type {aka ros::Time}
In file included from /home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:3:
/home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:533:58: note:   initializing argument 4 of ‘void go_to_goalPos(float, float, float, int)’
  533 | void go_to_goalPos(float x, float y, float z , ros::time leader_time) {  //global
      |                                                ~~~~~~~~~~^~~~~~~~~~~
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:273:271: error: cannot convert ‘std_msgs::Header_<std::allocator<void> >::_stamp_type’ {aka ‘ros::Time’} to ‘int’
  273 |    go_to_goalPos(current_global_position_2.pose.position.x + posError_wp.pose.position.x,  current_global_position_2.pose.position.y +  posError_wp.pose.position.y ,  current_global_position_2.pose.position.z + posError_wp.pose.position.z, drone1_global_position.header.stamp);
      |                                                                                                                                                                                                                                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~
      |                                                                                                                                                                                                                                                                               |
      |                                                                                                                                                                                                                                                                               std_msgs::Header_<std::allocator<void> >::_stamp_type {aka ros::Time}
In file included from /home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:3:
/home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:533:58: note:   initializing argument 4 of ‘void go_to_goalPos(float, float, float, int)’
  533 | void go_to_goalPos(float x, float y, float z , ros::time leader_time) {  //global
      |                                                ~~~~~~~~~~^~~~~~~~~~~
make[2]: *** [CMakeFiles/follower_sub.dir/build.make:63: CMakeFiles/follower_sub.dir/src/follower_sub.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:1804: CMakeFiles/follower_sub.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
